# BigDecimal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  decimal.hpp
examples/: examples.cpp
tests/: decimal_tests.cpp  decimal_tests.hpp  main.cpp  ranged_decimal_tests.cpp  ranged_decimal_tests.hpp  test_macros.hpp  tests.cpp
